[workspace]
members = [
    "ports/servo",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

#[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
[replace]
"https://github.com/servo/webrender#0.60.0" = { git = "https://github.com/szeged/webrender.git", branch="update_wr60"}
"https://github.com/servo/webrender#webrender_api:0.60.0" = { git = "https://github.com/szeged/webrender.git", branch="update_wr60", features = ["ipc"] }
